--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit==1.28.1
-requests==2.31.0
-beautifulsoup4==4.12.2
-pandas==2.1.1
-lxml==4.9.3
+streamlit
+requests
+beautifulsoup4
+pandas
